[tool.poetry]
name = "unupg"
version = "0.1.0"
description = ""
authors = ["Mariia Ha <m.haiduchenko@setuniversity.edu.ua>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
english-words = "^2.0.1"
black = "^24.10.0"
termcolor = "^2.5.0"
pyfiglet = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"